Implement quality-of-service tiers in WebCoreDecompressionSession
Created attachment 322418 [details] Patch
<rdar://problem/34774531>
<rdar://problem/34774533>
Comment on attachment 322418 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322418&action=review > Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm:269 > + LOG(Media, "WebCoreDecompressionSession::decodeSample(%p) - decoding took %g%% of duration (%gs vs. %gs)", this, 100. * deltaRatio, delta, duration); Won't this produce a LOT of log spew? Maybe do it every N frames as an average?
(In reply to Dean Jackson from comment #4) > Comment on attachment 322418 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=322418&action=review > > > Source/WebCore/platform/graphics/cocoa/WebCoreDecompressionSession.mm:269 > > + LOG(Media, "WebCoreDecompressionSession::decodeSample(%p) - decoding took %g%% of duration (%gs vs. %gs)", this, 100. * deltaRatio, delta, duration); > > Won't this produce a LOT of log spew? Maybe do it every N frames as an > average? Sure we can drop it. The "every N frames as an average" is the logging in updateQosWithDecodeTimeStatistics().
Created attachment 322422 [details] Patch for landing
Created attachment 322452 [details] Patch for landing
Created attachment 322460 [details] Patch for landing
Created attachment 322530 [details] Patch for landing
Comment on attachment 322530 [details] Patch for landing Clearing flags on attachment: 322530 Committed r222803: <http://trac.webkit.org/changeset/222803>
All reviewed patches have been landed. Closing bug.